--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-circular-progress": "^0.1.2",
     "react-native-elements": "^0.19.0",
     "react-native-fa-icons": "^3.0.1",
     "react-native-facebook-login": "^1.6.0",
     "react-native-fbsdklogin": "0.0.8",
-    "react-native-fontawesome": "^5.7.0"
+    "react-native-fontawesome": "^5.7.0",
+    "socket.io-client": "^2.0.4"
   }
 }
